<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="tip_amount">How much do you want to tip?</string>
    <string name="first_option">20 %</string>
    <string name="second_option">18 %</string>
    <string name="third_option">15 %</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate_button_text">Calculate</string>
    <string name="tip_amount_text">Tip amount: %s</string>
</resources>